# PROJECT-B.O.N.K

./: .dockerignore  .gitattributes  .gitignore  .src  3le_data.txt  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  OVERHAUL_PLAN.md  PS.md  README.md  data.txt  docker-compose.yml  main.cpp  package-lock.json  package.json
.cache/clangd/index/: main.cpp.7C3993840E3CAA9A.idx
.github/workflows/: benchmark-nightly.yml  ci.yml
.tmp-motion-inspect/: motion-canvas-create-3.17.2.tgz
.tmp-motion-inspect/package/: package.json
demo-video/: README.md  package-lock.json  package.json
demo-video/docs/: SHOT_PLAN.md
demo-video/public/audio/: README.md
demo-video/public/reference/: README.md  burn-debug-output.json  readiness-output.txt
demo-video/scripts/: bg-render.sh  capture-reference.mjs  debug-render.cjs  debug-ui.cjs  do-render.cjs  prepare-demo-assets.mjs  render-ffmpeg.js  render-preview.mjs  sync-reference-data.mjs
demo-video/src/: project.ts
demo-video/src/lib/: assets.ts  generatedReferenceData.ts  primitives.tsx  referenceData.ts  theme.ts
demo-video/src/scenes/: s01-problem-idea.tsx  s02-cascade-loop.tsx  s03-implementation.tsx  s04-frontend-overview.tsx  s05-real-data-track.tsx  s06-threat-detection.tsx  s07-autonomous-response.tsx  s08-verification-close.tsx
docs/: BENCHMARK_WORKFLOW.md  COUNTERFACTUAL_DEMO.md  DEMO_STORYBOARD.md  DEMO_VOICEOVER_SCRIPT.md  FINAL_VIDEO_DEMO_SCRIPT.md  HANDOFF.md  OPTIMIZATION_PLAN.md  PHASE 1.md  PHASE 2.md  PHASE 3.md  PHASE 4.md  PS_ALIGNMENT_PLAN.md  PS_EVIDENCE_INDEX.md  STRICT_REAL_DATA_DEMO_PLAN.md  TECHNICAL_REPORT_OUTLINE.md  implementation-plan.md  networking_stack_update.md  next-steps.md  report.aux  report.tex
docs/scenarios/: strict_natural_watch.example.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: navigation.ts  useHashRoute.ts
frontend/src/components/: BootSequence.tsx  BurnEfficiencyChart.tsx  ConjunctionBullseye.tsx  CounterfactualOutcomePanel.tsx  EarthGlobe.tsx  FuelHeatmap.tsx  GlassPanel.tsx  GroundTrackMap.tsx  ManeuverGantt.tsx  SimControls.tsx  StatusPanel.tsx
frontend/src/components/dashboard/: GlobalStepStatus.tsx  SatelliteFocusControls.tsx  ThreatSeverityFilters.tsx  UiPrimitives.tsx
frontend/src/components/threat/: ConjunctionDetailCard.tsx  ConjunctionEventList.tsx  queueModel.ts
frontend/src/dashboard/: DashboardContext.tsx
frontend/src/data/: coastlines.ts
frontend/src/hooks/: useApi.ts  useSound.ts
frontend/src/layout/: AppShell.tsx
frontend/src/pages/: BurnOpsPage.tsx  CommandPage.tsx  EvasionPage.tsx  FleetStatusPage.tsx  ScorecardPage.tsx  ThreatPage.tsx  TrackPage.tsx
frontend/src/styles/: theme.ts
frontend/src/types/: api.ts  dashboard.ts
frontend/src/utils/: geo.ts
scripts/: api_contract_gate.sh  benchmark_compare.py  benchmark_envelope.py  broad_phase_sanity_gate.sh  capture_fps_evidence.sh  check_demo_readiness.py  docker_api_smoke.sh  evaluate_strict_manifest.py  generate_strict_manifest.py  hard_filter_canary_gate.sh  inject_synthetic_encounter.py  maneuver_ops_invariants_gate.sh  mine_strict_scenarios.py  moid_filter_validation.sh  narrow_phase_calibration_probe.sh  narrow_phase_false_negative_canary.sh  narrow_phase_false_negative_gate.sh  narrow_phase_uncertainty_observability_gate.sh  phase1_evidence_baseline.sh  phase2_regression_gate.sh  phase4_calibration_gate.sh  phase4_law_assertions_gate.sh  rank_strict_manifests.py  recovery_planner_invariants_gate.sh  recovery_slot_gate.sh  recovery_slot_sweep.sh  recovery_solver_compare.sh  recovery_sweep_determinism_gate.sh  replay_data_catalog.py  run_counterfactual_demo.sh  run_ready_demo.sh
src/: broad_phase.cpp  broad_phase.hpp  earth_frame.cpp  earth_frame.hpp  engine_runtime.cpp  engine_runtime.hpp  env_util.hpp  json_util.hpp  maneuver_common.cpp  maneuver_common.hpp  maneuver_recovery_planner.cpp  maneuver_recovery_planner.hpp  orbit_math.cpp  orbit_math.hpp  propagator.cpp  propagator.hpp  sim_clock.cpp  sim_clock.hpp  simulation_engine.cpp  simulation_engine.hpp  state_store.cpp  state_store.hpp  telemetry.cpp  telemetry.hpp  types.hpp
src/http/: api_server.cpp  api_server.hpp  request_parsers.cpp  request_parsers.hpp  response_builders.cpp  response_builders.hpp
tests/: fps-evidence.spec.js  sidebar-utilities.spec.js  sidebar-visual.spec.js  sim-controls-placement.spec.js  threat-focus-controls.spec.js  threat-page.spec.js  ui-layout.spec.js  watch-target-chip.spec.js
tools/: api_contract_gate.cpp  broad_phase_validation.cpp  maneuver_ops_invariants_gate.cpp  narrow_phase_calibration_probe.cpp  narrow_phase_false_negative_gate.cpp  phase2_regression.cpp  phase3_tick_benchmark.cpp  real_data_scenario_gen.cpp  recovery_planner_invariants.cpp  recovery_slot_gate.cpp
tuner/: nsga2_jluna_bridge.cpp  nsga2_tuner.jl  offline_multiobjective_tuner.cpp
